--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     font-family:  Inter, "Noto Sans", sans-serif; /* Define la tipografía principal del sitio */
-    background-color: #fcf8f8; /* Color de fondo de la página */
+    background-color: #f0f0f0;
+    background-image: radial-gradient(circle, #ccc 1px, transparent 1px);
+    background-size: 14px 10px; /* Tamaño del patrón de puntos */
     margin: 0; /* Elimina el margen por defecto del body */
     padding: 0; /* Elimina el padding por defecto del body */
     display: flex; /* Usa flexbox para organizar el contenido */
@@ -10,7 +12,7 @@ body {
 }
 
 
-.hero {
+.hsero {
     display: flex; /* Usa flexbox para organizar el contenido */
     flex-direction: column; /* Los elementos se apilan verticalmente */
     justify-content: center; /* Centra el contenido verticalmente */
@@ -25,18 +27,63 @@ body {
     color: white; /* Color del texto blanco */
 }
 
-.hero h1 {
+.hsero h1 {
     font-size: 2.25rem; /* Tamaño de la fuente del título */
     font-weight: 900; /* Estilo de texto en negrita extrema */
     margin: 0; /* Elimina el margen */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra negra suave */
 }
 
-.hero h2 {
+.hsero h2 {
     font-size: 1rem; /* Tamaño de la fuente del subtítulo */
     font-weight: normal; /* Peso de la fuente normal */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra negra suave */
 }
+
+
+.inicio {
+    text-align: center; /* Alinea horizontalmente todo el contenido */
+}
+
+.imagen-centrada {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%; /* Puedes ajustar el tamaño si es necesario */
+}
+
+.inicio h1{
+    position: relative; /* Para posicionar el pseudo-elemento */
+   
+}
+
+.inicio h1::after{
+    content: '';
+    position: absolute;
+    left: 100px;
+    right: 100px;
+    top: 23px;
+    bottom: 2; /* Coloca el subrayado en la parte inferior */
+    height: 20px; /* Altura del subrayado */
+    background-color: #e9d5cc; /* Color de fondo del subrayado */
+    z-index: -1; /* Envía el subrayado detrás del texto */
+}
+
+
+
+
+/* Texto de bienvenida */
+h1 {
+    margin-top: 0px;
+    font-size: 34px;
+    text-align: center;
+    color: #333;
+}
+
+
+
+
+
 
 h3 {
     color: #1d0c0c; /* Color marrón oscuro */
