--- a/inicioS.css
+++ b/inicioS.css
@@ -55,7 +55,6 @@ h3::after {
 
 button {
     min-width: 20rem; /* Ancho mínimo del botón */
-    max-width: 40rem; /* Ancho máximo del botón */
     margin: 0.2rem; /* Margen entre botones */
     padding: 0.5rem; /* Espaciado interno del botón */
     font-size: 1rem; /* Tamaño del texto del botón */
@@ -64,6 +63,7 @@ button {
     border: 1px solid #b95e33; /* Borde del botón */
     color: #333; /* Color del texto */
     font-weight: bold; /* Negrita en el texto */
+
 }
 
 .br {
@@ -112,4 +112,18 @@ input {
     height: 20px; /* Altura del subrayado */
     background-color: #e9d5cc; /* Color de fondo del subrayado */
     z-index: -1; /* Envía el subrayado detrás del texto */
+}
+
+
+@media (min-width: 1024px) {
+    
+form{
+max-width: 20%;
+text-align: center;
+margin-left: 40%;
+margin-right: 40%;
+}
+button {
+    min-width: 30%; /* Ancho mínimo del botón */
+}
 }
